src/styles/main.css
/*
  Kap Site Styling
  ----------------
*/

/* Import Reset */
@import "eightpoint/dist/eight.min";

/* Clear Sans Font */
@font-face {
    font-family: 'Clear Sans';
    src: url('./fonts/clearsans/EOT/ClearSans-Regular.eot') format('embedded-opentype'),
        url('./fonts/clearsans/WOFF/ClearSans-Regular.woff') format('woff'),
        url('./fonts/clearsans/TTF/ClearSans-Regular.ttf')  format('truetype'),
        url('./fonts/clearsans/SVG/ClearSans-Regular.svg#ClearSans-Regular') format('svg');
}
@font-face {
    font-family: 'Clear Sans';
    font-weight: 700;
    src: url('./fonts/clearsans/EOT/ClearSans-Bold.eot') format('embedded-opentype'),
        url('./fonts/clearsans/WOFF/ClearSans-Bold.woff') format('woff'),
        url('./fonts/clearsans/TTF/ClearSans-Bold.ttf')  format('truetype'),
        url('./fonts/clearsans/SVG/ClearSans-Bold.svg#ClearSans-Bold') format('svg');
}

/***********
Base styling
************/

/* Colour vars */

$grey-darker:  #222222;
$grey-dark:    #414141;
$grey:         #949494;
$grey-light:   #B8B8B8;
$grey-lighter: #CCCCCC;
$neon-mint:    #00CCA3;
$blue:         #3F69C2;
$purple:       #8F08FD;

body {
  color: $grey-darker;
  background: white;
  font-size: 1.2rem;
  font-family: 'Clear Sans';
  letter-spacing: -.010em;
}

::-moz-selection {
  background: $neon-mint;
  color: $grey-darker;
}
::selection {
  background: $neon-mint;
  color: $grey-darker;
}

img, svg {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  letter-spacing: -0.010em;
}

h1 {
  font-size: 3.2rem;
  line-height: 1.5em;
  color: white;
}

h2 {
  font-size: 2.4rem;
  line-height: 1.333em;
}

h3 {
  font-size: 1.6rem;
  line-height: 1.5em;
}

a {
  color: $grey-lighter;
  text-decoration: none;
  transition: color .12s ease-in-out, text-decoration .12s ease-in-out;
}

a:hover { color: $neon-mint; }
a.link--light { color: $neon-mint; }
a.link--light:hover { text-decoration: underline; }

a.button {
  border-radius: .8rem;
  background: $neon-mint;
  height: 4.8rem;
  padding: 0 1.7rem;
  display: flex;
  align-items: center;
  text-transform: uppercase;
  font-weight: 700;
  color: white;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

a.button svg, a.button img { padding-right: 1.8rem; }
.is-bold { font-weight: 700; }

/*
  Grid

  @TODO: temporary due to eightpoint changes?
*/
.container {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
  max-width: 97.4rem;
  display: flex;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  position: relative;
}

.col { flex: 1; }




/* Header/Footer */
.header, .footer {
  height: 50vh;
  height: 50vh;
  min-height: 27rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header { position: relative; }

.header-animation {
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: -1;
}

.header-animation::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: radial-gradient(farthest-corner at -10% 10% , #00CCA3 5%, #8F08FD 100%);
  animation: bg 6s ease-in infinite alternate;
  will-change: transform;
  transform-style: preserve-3d;
}

@keyframes bg {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(2);
  }
}

/* HEADER */
.site-header {
  display: flex;
  align-items: center;
  height: 96px;
}

.logo { line-height: 0; }

.status {
  margin-left: auto;
  border-radius: 4px;
  height: 3.2rem;
  display: flex;
  align-items: center;
  font-weight: 700;
  color: $grey-dark;
  background: white;
}

.status span { margin: 0 0.4rem; }
.status span:last-child { margin-right: 0.8rem; }

.status__tag {
  height: 2em;
  line-height: 2em;
  background: $neon-mint;
  border-radius: .4rem;
  color: white;
  padding: 0 0.8rem;
}

/* FOOTER */
.footer {
  background: white;
}

.footer__marketing {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-top: 6.2rem;
  position: relative;
  z-index: 1;
}

.footer__marketing h3 {
  max-width: 50rem;
  padding-bottom: 3.8rem;
  margin-right: 350px;
}

.footer__marketing-details { display: flex; }

.footer__marketing-details a {
  margin-right: 3.2rem;
  margin-bottom: 8px;
}

.footer__marketing-details span {
  color: $grey;
}

.footer__marketing-features {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  padding-bottom: 3.5rem;
  max-width: 350px;
}

.footer__marketing-features li {
  border: 2px solid $purple;
  width: 64px;
  height: 64px;
  border-radius: 50%;
  line-height: 74px;
  text-align: center;
}

.footer__marketing-features li:nth-child(2) svg {
  transform: scale(1.5);
}

.footer__brand {
  padding-top: 3rem;
  padding-bottom: 3rem;
  display: flex;
  align-items: center;
}

.footer__brand img { margin-right: 1.7rem; }
.footer__brand a {
  line-height: 0;
  font-weight: 600;
  color: #919191;
}
.footer__brand a:hover { color: $neon-mint; }
.footer__brand p { color: #919191; }

.footer__brand > a:last-child { margin-left: 25px; }




/* Hero */
.hero {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: -2.4rem;
  padding-right: 350px;
}

.hero h2 {
  margin-bottom: 3.4rem;
  color: rgba(255, 255, 255, 0.65);
}

.hero__button {
  position: relative;
  z-index: 2;
  transition: transform .12s ease-in-out, color .12s ease-in-out;
  background: $neon-mint;
}

/* Explicitly state height for firefox */
.hero__button img { height: 1.7rem }

.hero__button:hover {
  transform: scale(1.1);
  background: #03BE98;
}

.hero__image {
  position: absolute;
  right: 15px;
  bottom: -236px;
  border-radius: 5px;
  max-width: 320px;
}

.hero__image::before {
  content: "";
  position: absolute;
  bottom: 5px;
  left: 0;
  display: block;
  width: 100%;
  height: calc(100% - 5px);
  border-radius: 5px;
  box-shadow: 0 24px 64px rgba(0, 0, 0, .4);
}



/* Responsive */

@media screen and (max-width: 352px) {
  .hero__image {
    padding: 0 16px;
  }

  .hero__image,
  .hero__image > img {
    width: 100%;
  }

  .hero__image:before {
    width: calc(100% - 32px);
    margin-left: 16px;
  }

  .footer__marketing-features li {
    width: 50px;
    height: 50px;
    line-height: 60px;
  }

  .footer__marketing-features svg {
    transform: scale(0.8);
  }
}

@media screen and (max-width: 768px) {
  h1 {
    font-size: 2.4rem;
    line-height: 3.6rem;
    letter-spacing: -.024rem;
  }
  /* temporary fix for reset */
  :-webkit-any(article,aside,nav,section) :-webkit-any(article,aside,nav,section) h1, :-webkit-any(article,aside,nav,section) h1 {
    font-size: 2.4rem;
  }
  .container {
    text-align: center;
    width: auto;
  }
  .header, .footer { min-height: 55rem; }

  .header { justify-content: flex-start; }
  .footer {
    padding-top: 280px;
    height: 78rem;
  }

  .site-header { width: 100%; }

  .hero {
    margin-bottom: 0;
    padding-right: 1.5rem;
    height: 100%;
    align-items: center;
    padding-top: 70px;
  }

  .hero__image {
    right: auto;
    left: 50%;
    transform: translateX(-50%);
    bottom: -260px;
  }

  .footer__marketing {
    margin-right: auto;
    align-items: center;
    padding-right: 2rem;
    padding-left: 2rem;
    padding-top: 3.6rem;
  }

  .footer__marketing h3 {
    margin-right: 0;
    padding-bottom: 3.2rem;
  }

  .footer__marketing-details {
    flex-direction: column;
    justify-content: center;
  }

  .footer__marketing-details a {
    margin-right: 0;
    line-height: normal;
  }

  .footer__brand {
    flex-direction: column;
    margin-bottom: 3rem;
  }
  .footer__brand-logo { margin-bottom: 1.6rem; }
  .footer__brand-logo img { margin: 0; }

  .footer__brand > a:last-child {
    margin-left: 0;
    margin-top: 16px;
  }
}

